[gd_scene load_steps=13 format=3 uid="uid://bewkk3kul60ni"]

[ext_resource type="Texture2D" uid="uid://4tgnghjfpqbs" path="res://assets/shader/texture/erase_texture_up.png" id="1"]
[ext_resource type="Shader" path="res://assets/shader/script/erase.gdshader" id="2"]
[ext_resource type="Texture2D" uid="uid://py4xd4x7cpe5" path="res://assets/player/head/head01.png" id="3"]
[ext_resource type="Script" path="res://src/eastereggs/fall_guy.gd" id="4"]
[ext_resource type="AudioStream" uid="uid://mq02q0n28g6j" path="res://assets/sfx/delete.wav" id="5"]
[ext_resource type="Texture2D" uid="uid://w2bcgdk824k7" path="res://assets/player/body/body01.png" id="6"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("2")
shader_parameter/progress = 0.0
shader_parameter/color = Color(1.5, 1.5, 1.5, 1)
shader_parameter/noise = ExtResource("1")

[sub_resource type="CircleShape2D" id="2"]
resource_local_to_scene = true
radius = 79.6279

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:material:shader_param/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites:material:shader_param/noise")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1")]
}

[sub_resource type="Animation" id="4"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="5"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 64, 64), Rect2(64, 128, 64, 64), Rect2(128, 128, 64, 64), Rect2(192, 128, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 64, 64), Rect2(64, 128, 64, 64), Rect2(128, 128, 64, 64), Rect2(192, 128, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dttqp"]
_data = {
"RESET": SubResource("3"),
"despawn": SubResource("4"),
"fall": SubResource("5")
}

[node name="FallGuy" type="RigidBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 0
input_pickable = true
mass = 0.816326
script = ExtResource("4")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -20)
amount = 100
emission_shape = 1
emission_sphere_radius = 19.61
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, -98)
color = Color(1, 1, 1, 0.823529)

[node name="Sprites" type="Node2D" parent="."]
material = SubResource("1")
position = Vector2(0, -32)

[node name="Body" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("6")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Head" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("3")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("2")

[node name="DespawnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dttqp")
}
autoplay = "RESET"

[connection signal="input_event" from="." to="." method="_on_FallGuy_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_FallGuy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_FallGuy_mouse_exited"]
